Fixed misalignment of icons on smaller screens.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -65,7 +65,6 @@ body {
 
 .icons a{
   position: relative;
-  left: 3%;
   display: table-cell;
   color: rgba(0,0,0,0.5);
 
@@ -76,7 +75,7 @@ body {
 }
 
 .icons i {
-  display: table-cell;
+
   text-align: center;
 }
 
